画面遷移実装

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,14 @@
     ],
     "rules": {
         "import/no-unresolved": "off",
-        "no-use-before-define": 0
+        "no-use-before-define": 0,
+        "react/prop-types": [
+            "error",
+            {
+                "ignore": [
+                    "navigation"
+                ]
+            }
+        ]
     }
 }
