--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@use-expo/font": "^2.0.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.1.2",
