メモ詳細画面でデータ取得・監視

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
                     "navigation"
                 ]
             }
-        ]
+        ],
+        "import/prefer-default-export": 0
     }
 }
