--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@use-expo/font": "^2.0.0",
+    "date-fns": "^2.16.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^7.9.0",
